kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hh-demo-api
  labels:
    name: hh-demo-api
