kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hh-demo-api-service
  namespace: hh-demo-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8001
      protocol: TCP
      name: http
  selector:
    app: hh-demo-api
