kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hh-demo-api-ingress
  namespace: hh-demo-api  
  annotations:
    kubernetes.io/ingress.class: ingress-nginx 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: api.heliumhealth.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hh-demo-api-service
                port:
                  number: 80
